--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -1099,6 +1099,8 @@ line-height: 120%; /* 24px */
     background-color: #7AE229; /* Your color for Low */
 }
 
+/*assigned*/
+
 .assigned{
     display: flex;
     flex-direction: column;
@@ -1111,24 +1113,108 @@ line-height: 120%; /* 24px */
     line-height: 120%; /* 24px */
 }
 
-.assignedSecond{
-    color: var(--Version-2-main-color, #2A3647);
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
-    background-color: red;
+
+.underListContact{
+    margin-top: -13px;
+    position: absolute;    
+    padding-inline-start: 0px;
+    flex-direction: column;
+    border-radius: 10px;
+    background: var(--white, #FFF); 
+    z-index: 1;
+    max-height:200px;
+    width: 440px;
+   
+    overflow: auto; 
 }
 
-.assigns{
-    background-color: #29ABE2;
-    width: 100%;    
+::-webkit-scrollbar-thumb{
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 4px;
-    align-self: stretch; 
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+   background-color: #A8A8A8; 
 }
+
+::-webkit-scrollbar-track{
+    margin-top: 16px;   
+}
+
+::-webkit-scrollbar{
+height:0px;       
+}
+
+.custom-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Adjust as per your design */
+    
+    width: 400px; /* Adjust width to fit both label and checkbox */
+    height: 42px;
+    color: var(--black, #000);
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    line-height: 120%;
+   
+}
+
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+}
+
+.custom-checkbox label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    position: relative; /* Add a position to the label */
+}
+
+.custom-checkbox label:before {
+    content: '';
+    width: 24px; /* Set the width and height for the checkbox */
+    height: 24px;
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 25" fill="none"%3E%3Crect x="4.68213" y="4.39673" width="16" height="16" rx="3" stroke="%232A3647" stroke-width="2"%3E%3C/rect%3E%3C/svg%3E');
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 320px; 
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:before {
+    content: '';
+    width: 24px; /* Set the width and height for the checkbox */
+    height: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); */
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 334px;
+}
+
+.contactList{
+    display: flex;
+    gap:8px;
+    align-items: center;   
+    border-radius: 10px;
+    background-color: #eeeeee;
+    margin-top: 8px;
+    height:42px;
+    padding: 7px 16px;
+}
+
+.liContact{
+    list-style: none;
+    
+}
+
+.abbreviation{
+    height: 42px;
+    width:42px;
+    background-color: #1FD7C1;
+}
+
 
 .subtaskItem{
     display: flex;
@@ -1170,127 +1256,47 @@ display: flex;
     font-size: 16px;
     font-weight: 400;
     line-height: 120%;
-    /* margin-left: 24px;    */
 }
 
 
 
 /*Category*/
 
+
+
 .underList{ 
-     margin-top: -13px;
-    position: absolute;  
-   
-    
-    flex-direction: column;
-    border-radius: 10px;
-    background: var(--white, #FFF); 
-    z-index: 1;
-}
-
-.underListContact{
-    margin-top: -13px;
-    position: absolute;    
-    padding-inline-start: 0px;
-    flex-direction: column;
-    border-radius: 10px;
-    background: var(--white, #FFF); 
-    z-index: 1;
-    background-color: #29ABE2;
-    width: 440px;
-  
-}
-
-.custom-checkbox {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Adjust as per your design */
-    
-    width: 400px; /* Adjust width to fit both label and checkbox */
-    height: 42px;
-    color: var(--black, #000);
-    font-size: 20px;
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    line-height: 120%;
-    padding: 5px; /* Add padding for better spacing */
-}
-
-.custom-checkbox input[type="checkbox"] {
-    display: none;
-}
-
-.custom-checkbox label {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    position: relative; /* Add a position to the label */
-}
-
-.custom-checkbox label:before {
-    content: '';
-    width: 24px; /* Set the width and height for the checkbox */
-    height: 24px;
-    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 25" fill="none"%3E%3Crect x="4.68213" y="4.39673" width="16" height="16" rx="3" stroke="%232A3647" stroke-width="2"%3E%3C/rect%3E%3C/svg%3E');
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 334px; 
-}
-
-.custom-checkbox input[type="checkbox"]:checked + label:before {
-    content: '';
-    width: 24px; /* Set the width and height for the checkbox */
-    height: 24px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); */
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 334px;
-}
-
-.contactList{
-    display: flex;
-    gap:8px;
-    align-items: center;   
-    border-radius: 10px;
-    background-color: #eeeeee;
-    margin-top: 8px;
-    height:42px;
-    padding: 7px 16px;
-}
-
-.liContact{
-    list-style: none;
-    
-}
-
-.abbreviation{
-    height: 42px;
-    width:42px;
-    background-color: #1FD7C1;
+    margin-top: -20px;
+   position: absolute;  
+   display: flex;
+   padding-inline-start: 0px;
+   flex-direction: column;
+   border-radius: 10px;
+   background: var(--white, #FFF); 
+   z-index: 1;
 }
 
 .options{  
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-    background: var(--white, #FFF);
-    list-style: none;
-    padding: 12px 16px;
-    align-items: center;
-    font-family: "Inter", sans-serif;
-    font-size: 20px;   
-    font-weight: 400;
-    line-height: 24px;
-    width:410px;
+    margin-top: 15px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   border-radius: 10px;
+   background: var(--white, #FFF);
+   list-style: none;
+   padding: 12px 16px;
+   align-items: center;
+   font-family: "Inter", sans-serif;
+   font-size: 20px;   
+   font-weight: 400;
+   line-height: 24px;
+   width:410px;
 }
 
-.optionsMarginTop{
-margin-top: 14px;
-}
+
+/* .optionsMarginTop{
+
+} */
+
 .options:hover{
    background: #eeeeee;
 }
