--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -40,10 +40,10 @@ body{
     display: flex;
     width: 440px;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
     gap: 16px;
-    height: 376px;
+    /* height: 376px; */
+    background-color: #A8A8A8;
 }
 
 
@@ -117,7 +117,6 @@ input::placeholder{/*changes the colour of the placeholder text in the input fie
 }
 
 .description_v1{ 
-    margin-top: 70px;
     gap:8px;
     display: flex;
     flex-direction: column;
@@ -306,20 +305,17 @@ span{
     justify-content: center;
     align-items: flex-start;
     gap: 24px;
-    
-    height: 416px;
+    background-color: #1FD7C1;
 }
 
 .dueDate{
     display: flex;
-    height: 96px; 
     width: 440px;
     flex-direction: column;
     align-items: flex-start; 
 }
 
-.dueDate_frame14{
-    
+.dueDate_frame14{    
     display: flex;
     padding: 12px 21px;
     align-items: center;
@@ -389,11 +385,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: #FF8190;
 }
 
-.frame28{
-    width: 440px;
-    height: 88px;
-}
-
 .textPrio{
     width: 37px;
     height: 24px;
@@ -404,7 +395,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priority{
-    height: 56px;
     display: flex;
     width: 440px;
     justify-content: center;
@@ -513,13 +503,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 14.51px;
 }
 
-.categoryCard{  
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-self: stretch;    
-}
-
 
 .TechnicalTask{
     padding: 4px 24px;
@@ -551,10 +534,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-}
-
-.category{
-    margin-bottom: 8px;
 }
 
 .categoryFrame74{
@@ -616,7 +595,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }                                                             
 
 .subtasks{
-    height: 76px;
     display: flex;
     width: 440px;
     flex-direction: column;
