--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -3,7 +3,7 @@
     <b>Kanban Project Management Tool</b>
   </div>
   <div class="user-profil-initials-container">
-    <svg class="user-profil-question-mark" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+    <svg onclick="loadHelp()" id="helpIcon" class="user-profil-question-mark" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
       <mask id="mask0_113865_2311" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
         <rect width="32" height="32" fill="#D9D9D9" />
       </mask>
