--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -74,7 +74,7 @@ body{
 }
 
 .title_frame14{
-    cursor: pointer; 
+    
     display: flex;
     padding: 12px 21px;
     align-items: center;
@@ -88,7 +88,6 @@ body{
 
 
 .text_enterTitle{
-    cursor: pointer; 
     width: 398px;/*wird wahrscheinlich nicht benötigt - figma ist ohne width*/
     height: 24px;/*wird wahrscheinlich nicht benötigt - figma ist ohne height*/
     font-family: "Inter", sans-serif;
@@ -156,7 +155,6 @@ input::placeholder{/*changes the colour of the placeholder text in the input fie
 }
 
 .frame17{
-    cursor: pointer; 
     position: relative;
     height: 120px;
     flex: 1;
@@ -180,7 +178,7 @@ input::placeholder{/*changes the colour of the placeholder text in the input fie
 }
 
 .text_enterDescription{
-    cursor: pointer; 
+    /* position: absolute; */
     display: flex;
     font-family: "Inter", sans-serif;
     background-color: white;
@@ -228,7 +226,6 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 }
 
 .frame74{
-    
     display: flex;
     width: 408px;
     padding: 12px 16px;
@@ -252,22 +249,15 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
     line-height: 24px;
 }
 
-.searchContacts{
-    cursor:pointer;
-}
-
 .imgArrows{
     width: 24px;
     height: 24px; 
-    transition: 100ms ease-in-out; 
-    cursor: pointer; 
+    
 }
 
 .arrow_drop_down{
     width: 24px;
-    height: 24px;  
-    transition: 100ms ease-in-out; 
-    cursor: pointer;      
+    height: 24px;       
 }
 
 .arrow_drop_downHover{
@@ -276,8 +266,6 @@ textarea::placeholder { /*changes the colour of the placeholder text in the text
 
 .imgArrows:hover .arrow_drop_downHover{
 display: block; /* Show the hover image when the container is being hovered */
-transition: 100ms ease-in-out; 
-cursor: pointer; 
 }
 
 .imgArrows:hover:hover .arrow_drop_down{
@@ -346,8 +334,7 @@ span{
     align-items: flex-start; 
 }
 
-.dueDate_frame14{ 
-    cursor: pointer;  
+.dueDate_frame14{    
     display: flex;
     padding: 12px 21px;
     align-items: center;
@@ -369,7 +356,6 @@ span{
 }
 
 .frame211{ 
-  
     display: flex;
     flex-direction: column;
     height: 64px;
@@ -381,7 +367,6 @@ span{
 /*  */
 
 .inputDate{
-    cursor:pointer;
     display: flex;
     justify-content: space-between;
     width: 404px;
@@ -401,7 +386,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: block;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cmask id='mask0_75592_13837' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.855469' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_75592_13837)'%3E%3Cpath d='M15.3555 18C14.6555 18 14.0638 17.7583 13.5805 17.275C13.0971 16.7917 12.8555 16.2 12.8555 15.5C12.8555 14.8 13.0971 14.2083 13.5805 13.725C14.0638 13.2417 14.6555 13 15.3555 13C16.0555 13 16.6471 13.2417 17.1305 13.725C17.6138 14.2083 17.8555 14.8 17.8555 15.5C17.8555 16.2 17.6138 16.7917 17.1305 17.275C16.6471 17.7583 16.0555 18 15.3555 18ZM5.85547 22C5.30547 22 4.83464 21.8042 4.44297 21.4125C4.0513 21.0208 3.85547 20.55 3.85547 20V6C3.85547 5.45 4.0513 4.97917 4.44297 4.5875C4.83464 4.19583 5.30547 4 5.85547 4H6.85547V3C6.85547 2.71667 6.9513 2.47917 7.14297 2.2875C7.33464 2.09583 7.57214 2 7.85547 2C8.1388 2 8.3763 2.09583 8.56797 2.2875C8.75964 2.47917 8.85547 2.71667 8.85547 3V4H16.8555V3C16.8555 2.71667 16.9513 2.47917 17.143 2.2875C17.3346 2.09583 17.5721 2 17.8555 2C18.1388 2 18.3763 2.09583 18.568 2.2875C18.7596 2.47917 18.8555 2.71667 18.8555 3V4H19.8555C20.4055 4 20.8763 4.19583 21.268 4.5875C21.6596 4.97917 21.8555 5.45 21.8555 6V20C21.8555 20.55 21.6596 21.0208 21.268 21.4125C20.8763 21.8042 20.4055 22 19.8555 22H5.85547ZM5.85547 20H19.8555V10H5.85547V20ZM5.85547 8H19.8555V6H5.85547V8Z' fill='%232A3647'/%3E%3C/g%3E%3C/svg%3E");
     background-size: cover;
-    cursor:pointer;
 }
 
 .event{
@@ -439,7 +423,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priorityUrgent{
-    cursor:pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
@@ -478,7 +461,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 .priorityMedium{
-    cursor:pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
@@ -510,7 +492,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .priorityLow{
-    cursor:pointer;
     display: flex;
     padding: 16px 10px;
     justify-content: center;
@@ -575,7 +556,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .categoryFrame74{
-    cursor: pointer; 
     z-index: 6;
     display: flex;
     padding: 12px 16px;
@@ -715,7 +695,6 @@ line-height: 120%; /* 24px */
 }
 
 .subtasksFrame14{
-    cursor:pointer;
     display: flex;
     padding: 12px 16px;
     justify-content: space-between;
@@ -727,7 +706,6 @@ line-height: 120%; /* 24px */
 }
 
 .textAddSubtasks{
-    cursor:pointer;
     width: 170px;
     height: 24px;
     font-family: "Inter", sans-serif;
@@ -777,16 +755,9 @@ line-height: 120%; /* 24px */
     gap: 4px;
 }
 
-.imgCanel{
-    width: 24px;
-    height: 24px;
-}
-
 .imgCancelHover {
     display: none;
     position: relative;  
-    width: 24px;
-    height: 24px;
 }
 
 .imgCancelContainer:hover .imgCancel {
@@ -800,31 +771,20 @@ line-height: 120%; /* 24px */
 .subtasksImgCheck{
     width: 24px;
     height: 24px;
-    cursor:pointer;
 }
 
-.subtaskCheck{
-    cursor:pointer;
+.subtasksCheck{
     width: 24px;
     height: 24px;
 }
-/* 
-Hide the hover image by default */
+
+/* Hide the hover image by default */
 .subtaskCheckHover {
     display: none;
 }
 
-.subtaskCheck:hover{
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Crect x='0.144531' width='24' height='24' rx='12' fill='%23EEEEEE'/%3E%3Cmask id='mask0_75592_9966' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.144531' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_75592_9966)'%3E%3Cpath d='M9.69474 15.15L18.1697 6.675C18.3697 6.475 18.6072 6.375 18.8822 6.375C19.1572 6.375 19.3947 6.475 19.5947 6.675C19.7947 6.875 19.8947 7.1125 19.8947 7.3875C19.8947 7.6625 19.7947 7.9 19.5947 8.1L10.3947 17.3C10.1947 17.5 9.96141 17.6 9.69474 17.6C9.42807 17.6 9.19474 17.5 8.99474 17.3L4.69474 13C4.49474 12.8 4.3989 12.5625 4.40724 12.2875C4.41557 12.0125 4.51974 11.775 4.71974 11.575C4.91974 11.375 5.15724 11.275 5.43224 11.275C5.70724 11.275 5.94474 11.375 6.14474 11.575L9.69474 15.15Z' fill='%232A3647'/%3E%3C/g%3E%3C/svg%3E");
-}
-
-.deleteImg:hover{
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Crect x='0.144531' width='24' height='24' rx='12' fill='%23EEEEEE'/%3E%3Cmask id='mask0_75592_9954' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.144531' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_75592_9954)'%3E%3Cpath d='M7.14453 21C6.59453 21 6.1237 20.8042 5.73203 20.4125C5.34036 20.0208 5.14453 19.55 5.14453 19V6C4.8612 6 4.6237 5.90417 4.43203 5.7125C4.24036 5.52083 4.14453 5.28333 4.14453 5C4.14453 4.71667 4.24036 4.47917 4.43203 4.2875C4.6237 4.09583 4.8612 4 5.14453 4H9.14453C9.14453 3.71667 9.24036 3.47917 9.43203 3.2875C9.6237 3.09583 9.8612 3 10.1445 3H14.1445C14.4279 3 14.6654 3.09583 14.857 3.2875C15.0487 3.47917 15.1445 3.71667 15.1445 4H19.1445C19.4279 4 19.6654 4.09583 19.857 4.2875C20.0487 4.47917 20.1445 4.71667 20.1445 5C20.1445 5.28333 20.0487 5.52083 19.857 5.7125C19.6654 5.90417 19.4279 6 19.1445 6V19C19.1445 19.55 18.9487 20.0208 18.557 20.4125C18.1654 20.8042 17.6945 21 17.1445 21H7.14453ZM7.14453 6V19H17.1445V6H7.14453ZM9.14453 16C9.14453 16.2833 9.24036 16.5208 9.43203 16.7125C9.6237 16.9042 9.8612 17 10.1445 17C10.4279 17 10.6654 16.9042 10.857 16.7125C11.0487 16.5208 11.1445 16.2833 11.1445 16V9C11.1445 8.71667 11.0487 8.47917 10.857 8.2875C10.6654 8.09583 10.4279 8 10.1445 8C9.8612 8 9.6237 8.09583 9.43203 8.2875C9.24036 8.47917 9.14453 8.71667 9.14453 9V16ZM13.1445 16C13.1445 16.2833 13.2404 16.5208 13.432 16.7125C13.6237 16.9042 13.8612 17 14.1445 17C14.4279 17 14.6654 16.9042 14.857 16.7125C15.0487 16.5208 15.1445 16.2833 15.1445 16V9C15.1445 8.71667 15.0487 8.47917 14.857 8.2875C14.6654 8.09583 14.4279 8 14.1445 8C13.8612 8 13.6237 8.09583 13.432 8.2875C13.2404 8.47917 13.1445 8.71667 13.1445 9V16Z' fill='%232A3647'/%3E%3C/g%3E%3C/svg%3E");
-}
-
 /* Show the hover image when hovering over the parent */
 .subtasksImgCheck:hover .subtaskCheckHover {
-    cursor: pointer;
     display: block;
 }
 
@@ -893,8 +853,12 @@ Hide the hover image by default */
     color: #29ABE2;
 }
 
+.clear{
+    width: 24px;
+    height: 24px;
+}
 
-.clear .imgCancelContainer .imgCancel{
+.imgCancel{
     width: 24px;
     height: 24px;
 }
@@ -925,6 +889,9 @@ Hide the hover image by default */
 .primary:hover{   
     background: #29ABE2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  /*ONLY ON CLICK: Animation and animation-Duration*/
+    /* animation: ease-in-out;    
+    animation-duration: 100s; */
 }
 
 .textCreateTask{
@@ -1145,24 +1112,21 @@ Hide the hover image by default */
     justify-content: center;
     border-radius: 8px;
    background-color: #A8A8A8; 
-   cursor:pointer;
 }
 
 ::-webkit-scrollbar-track{
     margin-top: 16px;   
-    cursor:pointer;
 }
 
 ::-webkit-scrollbar{
-height:0px;    
-cursor:pointer;   
+height:0px;       
 }
 
 .custom-checkbox {
     display: flex;
     align-items: center;
     justify-content: space-between; /* Adjust as per your design */
-    cursor:pointer;
+    
     width: 400px; /* Adjust width to fit both label and checkbox */
     height: 42px;
     color: var(--black, #000);
@@ -1200,6 +1164,7 @@ cursor:pointer;
     width: 24px; /* Set the width and height for the checkbox */
     height: 24px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); */
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
@@ -1257,12 +1222,8 @@ display: flex;
 .edit{
     width: 24px;
     height: 24px;  
-    cursor:pointer;
 }
 
-.delete{
-    cursor:pointer;
-}
 
 .allSubtasks{
     display: flex;
@@ -1278,6 +1239,8 @@ display: flex;
 
 /*Category*/
 
+
+
 .underList{ 
    position: absolute;  
    display: flex;
@@ -1289,7 +1252,6 @@ display: flex;
 }
 
 .options{    
-    cursor:pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
