--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -181,7 +181,7 @@ hr{
 .addContactPopup{
     position: fixed;
     height: 600px;
-    left: 120px;
+    left: 250px;
 }
 .addContactRight{
     background-color: white;
@@ -269,7 +269,7 @@ hr{
 .editContactPopup{
     position: fixed;
     height: 800px;
-    left: 120px;
+    left: 250px;
     font-weight: 700;
 }
 .editContactRight{
@@ -444,4 +444,29 @@ hr{
 .create-text{
     font-size: 15px;
 
+}
+.slide-left{
+    animation: animation 1s ease 0s 1 normal forwards;
+}
+@keyframes animation {
+	0% {
+		transform: translateX(400px);
+	}
+
+	100% {
+		transform: translateX(0px);
+	}
+}
+
+.slide-left-3{
+    animation: animation 2s ease 0s 1 normal forwards;
+}
+@keyframes animation {
+	0% {
+		transform: translateX(500px);
+	}
+
+	100% {
+		transform: translateX(0px);
+	}
 }
