update add contact

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -443,30 +443,13 @@ hr{
 }
 .create-text{
     font-size: 15px;
-
 }
-.slide-left{
-    animation: animation 1s ease 0s 1 normal forwards;
-}
-@keyframes animation {
-	0% {
-		transform: translateX(400px);
-	}
-
-	100% {
-		transform: translateX(0px);
-	}
-}
-
-.slide-left-3{
-    animation: animation 2s ease 0s 1 normal forwards;
-}
-@keyframes animation {
-	0% {
-		transform: translateX(500px);
-	}
-
-	100% {
-		transform: translateX(0px);
-	}
+.success{
+    background-color: #293647;
+    padding: 23px;
+    position: fixed;
+    left: 570px;
+    bottom: 150px;
+    color: white;
+    border-radius: 12px;
 }
