--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -233,10 +233,12 @@
     }
 }
 
-@media(max-width: 576px){
+@media(min-width: 397px) and (max-width: 577.50px){
     .textContainer_addTask{
-        font-size: 47px;        
-        margin-left: 10px;
+        font-size: 107px; 
+        background-color: antiquewhite;
+        margin-left: 10px;      
+        width: 577.50px;
     }
 
     .content_addTask{       
@@ -244,10 +246,11 @@
     }
 
     .group66_addTask{
+        background-color: aqua;
         display: flex;
         padding: 10px;
-        width: 376px;
-        gap:8px;
+        width: 577.50px;
+        /* gap: 8px; */
         margin-left: 0%;
         flex-direction: column;        
     }
@@ -257,16 +260,16 @@
     }      
 
     .inputRight_addTask{
-        width: 376px;   
+        width: 577.50px;   
         margin-top: 44px;        
     }
 
     .inputLeft_addTask{
-        width: 376px;        
+        width: 577.50px;        
     }
 
     .title_v1{
-        width: 376px;
+        width: 577.50px;
     }
 
     .title{
@@ -278,7 +281,7 @@
     }
 
     .frame203{
-        width: 376px;
+        width: 560px;
     }
 
     .title_frame14{    
@@ -288,7 +291,7 @@
 
     .text_enterTitle{
     font-size: 16px;
-    width: 100%;
+    width: 560px;
     }
 
     .description{
@@ -296,11 +299,11 @@
     }
 
     .description_v1{        
-    width: 376px;
+    width: 560px;
     }
 
     .frame207 {
-        width: 376px;
+        width: 560px;
     }
 
     .text_enterDescription{
@@ -314,85 +317,102 @@
     } 
 
     .frame17{
-        width: 376px;
+        width: 560px;
     }
 
     .asignedTo_v1{
-        width: 376px;
+        width: 560px;
+        
     }
 
     .asignedTo{
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .categoryFrame74{
-        width: 330px;    
+        width: 516px;    
         padding: 10px 21px;
     }
 
-    .searchContacts{
-        width: 376px;
-        font-size: 16px;
+    .searchContacts{        
+        width: 560px;
+        font-size: 20px;
     }
 
     .underList{
-        width: 376px;
+        
+        width: 560px;
     }
 
     .underListContact{
-        width: 376px;
-
+        width: 560px;
     }
 
+    
+
     .contactAvatar{
-        width: 376px;
+        width: 560px;
     }
 
     .nameContact{
-        font-size: 16px;
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+    }
+
+    .custom-checkbox{
+        margin-left: 10px;
+        margin-top: 5px;
+        width: 520px;
+    }
+
+    .custom-checkbox label:before {
+        margin-left: 80px;
+    
     }
 
     .circle{
-        margin-top: 5px;
-        font-size: 16px; 
-        width: 34px;
-        height: 34px;
+        font-size: 20px; 
+        width: 44px;
+        height: 44px;
     }
 
     .dueDate{
-        width: 376px;
+        width: 560px;
     }
 
     .text_DueDate{
-        font-size: 16px;
+        font-size: 20px;
     }
 
     input[type="date"]::-webkit-calendar-picker-indicator {
-       width:20px;
+       width: 24px;
     }
+
     .frame211{
-        width: 376px;
+        width: 560px;
     }
 
     .inputDate{
-        font-size: 16px;    
+        font-size: 20px;    
+        width: 560px;
     }
 
     .frame28{
-        width: 376px;
+        width: 560px;
     }
 
     .titlePrio{
-        font-size: 16px;
+        font-size: 20px;
     }
 
 
     .inputDate{
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .priority{
-        width: 376px;         
+        width: 560px;         
     }
 
     .priorityUrgent, .priorityMedium, .priorityLow{    
@@ -401,57 +421,53 @@
     }
 
     .textUrgent{
-        font-size: 16px;
-        width: 55px;
+        font-size: 20px;
+        width: 65px;
     }
 
     .textMedium{
-        font-size: 16px;
-        width: 62px;
+        font-size: 20px;
+        width: 82px;
     }
 
     .textLow{
-        font-size: 16px;
-        width: 34px;
+        font-size: 20px;
+        width: 44px;
     }
 
     .category{
-        width: 376px;
+        width: 560px;
     }
 
     .textCategory{
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .categoryFrame74{
-        font-size: 16px;        
+        font-size: 20px;        
     }
 
      .options{
-        width: 344px;
+        width: 530px;
     }
 
     .subtasks{
-        width: 373px;
+        width: 557px;
     }
 
     .textSubtasks, .textAddSubtasks{    
-        font-size: 16px;
+        font-size: 20px;
     }
 
-    .subtasksFrame14{
-        padding: 12px 16px;
+    .subtasksFrame14
+        padding: 14px 20px;
     }
 
    .addTasksFooter{
         padding: 10px;
         margin-left: 0;
-        width: 376px;
+        width: 560px;
    } 
-
-   .secondary{
-        display: none;
-   }
 
    .primary{
         padding: 16px;
@@ -463,7 +479,7 @@
     }
 
    .comment{
-        font: 16px;
+        font: 20px;
     }
 }
 
