--- a/styles/legal_help_privacy.css
+++ b/styles/legal_help_privacy.css
@@ -73,6 +73,10 @@ body {
   padding-bottom: 16px;
 }
 
+.pd-top {
+  padding-top: 16px;
+}
+
 .listing-container {
   padding-bottom: 16px;
 }
@@ -98,3 +102,5 @@ body {
   gap: 24px !important;
   margin-bottom: 24px;
 }
+
+
