--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -2,17 +2,16 @@
 @media(max-width: 397px){
 
    .textContainer_addTask{
-        font-size: 47px;        
-    }
-
-    .content_addTask{       
-            margin-left: 0;
+        font-size: 47px; 
+        margin-left: 5px; 
+        background-color: aqua;      
     }
 
     .group66_addTask{
         margin-left: 0;    
-        max-width:397px;
-        gap:8px;        
+        max-width: 367px;  
+        background-color: bisque;
+        gap: 8px;        
         align-items: center;
         flex-direction: column;        
     }
@@ -22,22 +21,24 @@
     }      
 
     .inputRight_addTask{ 
-        margin-top: 44px;        
+        margin-top: 44px;   
+        width: 357px;  
+        background-color: aquamarine;     
     }
 
     .inputLeft_addTask{
-        width:397px;    
-
-        background-color: aliceblue;
+        width:357px;   
+        background-color: rgb(12, 122, 217);
    
     }
 
     .title_v1{
-        width:397px;
+        width: 347px;
     }
 
     .title{
         font-size: 16px;
+        width: 347px;
     }
 
     .span{
@@ -45,7 +46,7 @@
     }
 
     .frame203{
-        width: 397px;
+        width: 357px;
     }
 
     .title_frame14{    
@@ -55,7 +56,8 @@
 
     .text_enterTitle{
     font-size: 16px;
-    width: 397px;
+    width: 310px;
+    background-color: black;
     }
 
     .description{
@@ -63,11 +65,11 @@
     }
 
     .description_v1{        
-    width: 397px;
+    width: 357px;
     }
 
     .frame207 {
-        width: 397px;
+        width: 357px;
     }
 
     .text_enterDescription{
@@ -81,40 +83,52 @@
     } 
 
     .frame17{
-        width: 397px;
+        width: 357px;
     }
 
     .asignedTo_v1{
-        
-        width: 397px;
+        background-color: brown;
+        width: 357px;
     }
 
-    .asignedTo{ background-color: bisque;
+    .asignedTo{
+        background-color: brown; 
         font-size: 16px;
     }
 
     .categoryFrame74{
-        width: 397px;    
+        width: 313px;  
+        background-color: blue;
         padding: 10px 21px;
+        
     }
 
     .searchContacts{
-        width: 397px;
+        background-color: yellow;
+        width: 300x;       
         font-size: 16px;
     }
-
-    .underList{
-        width: 397px;
-       
+ 
+    .underListContact{
+        margin-top: 0;
     }
 
     .underListContact{
-        width: 397px;
-
+        width: 357px;        
     }
 
     .contactAvatar{
-        width: 397px;
+        width: 357px;
+    }
+
+    .nameContact{
+        font-size: 16px;
+    }
+
+    .custom-checkbox{
+        margin-left: 10px;
+        margin-top: 5px;
+        width: 210px;
     }
 
     .nameContact{
@@ -129,7 +143,7 @@
     }
 
     .dueDate{
-        width: 397px;
+        width: 357px;
     }
 
     .text_DueDate{
@@ -140,15 +154,11 @@
        width:20px;
     }
     .frame211{
-        width: 397px;
+        width: 357px;
     }
 
     .inputDate{
         font-size: 16px;    
-    }
-
-    .frame28{
-        width: 397px;
     }
 
     .titlePrio{
@@ -161,7 +171,7 @@
     }
 
     .priority{
-        width: 397px;         
+        width: 357px;         
     }
 
     .priorityUrgent, .priorityMedium, .priorityLow{    
@@ -184,38 +194,47 @@
         width: 34px;
     }
 
-    .category{
-        width: 397px;
+    .category{      
+        width: 306px;
+        font-size: 16px;
     }
+
 
     .textCategory{
         font-size: 16px;
     }
 
     .categoryFrame74{
-        font-size: 16px;        
+        font-size: 16px; 
+        
+            
     }
 
-     .options{
-        width: 397px;
+     .options{background-color: cadetblue;
+        width: 326px;
     }
 
     .subtasks{
-        width: 397px;
+        width: 357px;
     }
 
     .textSubtasks, .textAddSubtasks{    
         font-size: 16px;
     }
 
-    .subtasksFrame14{
-        padding: 12px 16px;
+    .subtasksFrame14{background-color: blueviolet;
+        padding: 10px 21px;
+       
     }
+    .subtaskItem{
+        width: 325px;
+    }
+    
 
    .addTasksFooter{
         padding: 10px;
         margin-left: 0;
-        width: 397px;
+        width: 357px;
    } 
 
    .secondary{
@@ -229,6 +248,7 @@
 
    .textCreateTask{
         font-size: 21px;
+        gap: 4px;
     }
 
    .comment{
@@ -236,56 +256,50 @@
     }
 }
 
-@media(min-width: 398px) and (max-width: 577.50px){
-    .textContainer_addTask{
-        font-size: 107px; 
-        margin-left: 10px;      
-        width: 577.50px;
-       
+@media(min-width: 398px) and (max-width: 577px){
+    .span, .description, .asignedTo, .nameContact,
+    .nameContact, .titlePrio, .textCategory,
+    .categoryFrame74, .subtasks, .comment,
+    .textSubtasks, .textAddSubtasks{    
+        font-size: 20px;
     }
 
-    .content_addTask{       
-        margin-left: 0px;       
+    .title_v1, .frame203, .description_v1, .frame207, 
+    .frame17,.asignedTo_v1, .underListContact, .frame211, 
+    .priority.inputLeft_addTask,.contactAvatar, .dueDate{
+        width: 560px;
+    }
+
+    .textContainer_addTask{
+        font-size: 47px; 
+        margin-left: 5px; 
+        background-color: aqua;      
     }
 
     .group66_addTask{
-        display: flex;
-        padding: 10px;
-        width: 577.50px;
-        margin-left: 0%;
-        flex-direction: column;     
-        background-color: aqua;   
+        margin-left: 0;    
+        max-width: 560px;  
+        background-color: bisque;
+        gap: 8px;        
+        align-items: center;
+        flex-direction: column;        
     }
 
     .vector4{
         display: none;
     }      
 
-    .inputRight_addTask{
-        width: 577.50px;   
-        margin-top: 44px;        
-    }
-
-    .inputLeft_addTask{
-        width: 577.50px;        
-    }
-
-    .title_v1{
-        width: 577.50px;
+    .inputRight_addTask{ 
+        margin-top: 44px;   
+        width: 560px;  
+        background-color: aquamarine;     
     }
 
     .title{
         font-size: 20px;
-    }
-
-    .span{
-        font-size: 20px;
-    }
-
-    .frame203{
         width: 560px;
     }
-
+   
     .title_frame14{    
         padding: 10px 21px;
         gap: 10px;
@@ -293,19 +307,8 @@
 
     .text_enterTitle{
     font-size: 20px;
-    width: 560px;
-    }
-
-    .description{
-        font-size: 20px;
-    }
-
-    .description_v1{        
-    width: 560px;
-    }
-
-    .frame207 {
-        width: 560px;
+    width: 310px;
+    background-color: black;
     }
 
     .text_enterDescription{
@@ -318,102 +321,44 @@
         display:none ;
     } 
 
-    .frame17{
-        width: 560px;
+      .categoryFrame74{
+        width: 515px;  
+        background-color: blue;
+        padding: 10px 21px;        
     }
 
-    .asignedTo_v1{
-        width: 560px;
-        
-    }
-
-    .asignedTo{
+    .searchContacts{
+        background-color: yellow;
+        width: 300x;       
         font-size: 20px;
     }
 
-    .categoryFrame74{
-        width: 516px;    
-        padding: 10px 21px;
-    }
-
-    .searchContacts{        
-        width: 560px;
-        font-size: 20px;
-    }
-
-    .underList{        
-        width: 560px;
-    }
-
-    .underListContact{
-        width: 560px;
-    }    
-
-    .contactAvatar{
-        width: 560px;
-    }
-
-    .nameContact{
-        display: flex;
-        justify-content: space-between;
-        font-size: 20px;
-    }
-
-    .custom-checkbox{
-        margin-left: 10px;
+    .custom-checkbox{background-color: chartreuse;
         margin-top: 5px;
-        width: 520px;
+        width: 210px;
     }
 
-    .custom-checkbox label:before {
-        margin-left: 80px;
-    
+    .custom-checkbox label:before{
+        margin-left: 85px;
+        background-color: black;
     }
-
-    .circle{
-        font-size: 20px; 
-        width: 44px;
-        height: 44px;
-    }
-
-    .dueDate{
-        margin-top: 15px;
-        width: 560px;
-    }
-
+   
     .text_DueDate{
+        background-color: crimson;
         font-size: 20px;
     }
 
     input[type="date"]::-webkit-calendar-picker-indicator {
-       width: 24px;
+       width:20px;
+       background-color: blue;
+       margin-left: 280px;
     }
-
-    .frame211{
-        width: 560px;
-    }
-
+      
     .inputDate{
-        font-size: 20px;    
-        width: 560px;
-    }
-
-    .frame28{
-        width: 560px;
-    }
-
-    .titlePrio{
-        font-size: 20px;
-    }
-
-
-    .inputDate{
-        font-size: 20px;
-    }
-
-    .priority{
-        width: 560px;         
-    }
+        background-color: cornflowerblue;
+        font-size: 16px;  
+        width: 560px;  
+    }   
 
     .priorityUrgent, .priorityMedium, .priorityLow{    
         padding: 13px 8px;     
@@ -422,81 +367,54 @@
 
     .textUrgent{
         font-size: 20px;
-        width: 65px;
+        width: 55px;
     }
 
     .textMedium{
         font-size: 20px;
-        width: 82px;
+        width: 62px;
     }
 
     .textLow{
         font-size: 20px;
-        width: 44px;
+        width: 34px;
     }
 
-    .category{
-        width: 560px;
-    }
-
-    .textCategory{
+    .category{      
+        width: 306px;
         font-size: 20px;
+    }   
+
+     .options, .subtaskItem{background-color: cadetblue;
+        width: 525px;
     }
 
-    .categoryFrame74{
-        font-size: 20px;        
-    }
-
-     .options{
-        width: 530px;
-    }
-
-    .subtasks{
-        width: 557px;
-    }
-
-    .textSubtasks, .textAddSubtasks{    
-        font-size: 20px;
-    }
-
-    .subtasksFrame14{
-        width: 518px;
-        padding: 14px 20px;
-    }
-
+    .subtasksFrame14{background-color: blueviolet;
+        width: 516px;
+        padding: 10px 21px;       
+    }   
+   
    .addTasksFooter{
         padding: 10px;
         margin-left: 0;
-        width: 560px;
+        width: 548px;
    } 
-   
-   .allSubtasks{
-    width: 560px;
-   }
 
-   .subtaskItem{
-    width: 525px;
-   }
    .primary{
-        padding: 16px;
+        padding: 24px;
         gap: 4px;
     }
 
    .textCreateTask{
-        font-size: 20px;
-    }
-
-   .comment{
-        width: 230px;
-        font-size: 20px;
-    }
+        font-size: 21px;
+        gap: 4px;
+    }  
 }
 
-@media(min-width: 578px) and (max-width: 777px){}
+@media(min-width: 578px) and (max-width: 775px){
+  
 
-
-
-
+}
 
 
 
